//===-- get_password_rsa_public_key.proto - request & response payloads ---===//
//
// Copyright (c) 2025 Nuclearist <nuclearist@teknology-hub.com>
// Part of tek-steamclient, under the GNU General Public License v3.0 or later
// See https://github.com/teknology-hub/tek-steamclient/blob/main/COPYING for
//    license information.
// SPDX-License-Identifier: GPL-3.0-or-later
//
//===----------------------------------------------------------------------===//
syntax = "proto3";

package tek.steamclient.cm.msg_payloads;

option optimize_for = LITE_RUNTIME;

// Request message payload for "Authentication.GetPasswordRSAPublicKey#1".
message GetPasswordRsaPublicKeyRequest {
  // Name of the account to get public key for.
  optional string account_name = 1;
}

// Response message payload for "Authentication.GetPasswordRSAPublicKey#1".
message GetPasswordRsaPublicKeyResponse {
  // 'n' parameter for the key.
  optional string modulus = 1;
  // 'e' parameter for the key.
  optional string exponent = 2;
  // Key generation timestamp.
  optional uint64 timestamp = 3;
}
